FIX: removing visible whitespace from right most column

--- a/drafts/htmx-functionality/basic-weather-table/css/styles.css
+++ b/drafts/htmx-functionality/basic-weather-table/css/styles.css
@@ -138,6 +138,7 @@ h1 {
   opacity: 0; /* Start invisible */
   overflow-x: scroll; /* Enable horizontal scrolling for smaller screens */
 text-align: center;
+border-radius: 8px;
 }
 
 /* Trigger animations when the 'show' class is added via JavaScript */
